k8s/sample_guide/cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: sample-clusterip
spec:
  type: ClusterIP
  ports:
    - name: "http-port"
      protocol: "TCP"
      port: 8080
      targetPort: 80
  selector:
    app: sample-app


# k run --image=centos:7 --restart=Never --rm -i testpod -- curl -s http://sample-clusterip:8080
