k8s/sample_guide/externalname.yml
apiVersion: v1
kind: Service
metadata:
  name: sample-externalname
spec:
  type: ExternalName
  externalName: sample.example.com
