k8s/sample_guide/ingress-app.yml
---
apiVersion: v1
kind: Service
metadata:
  name: sample-ingress-svc-1
spec:
  type: NodePort
  ports:
    - name: "http-port"
      protocol: "TCP"
      port: 8888
      targetPort: 80
  selector:
    ingress-app: sample1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-deployment-1
spec:
  replicas: 1
  selector:
    matchLabels:
      ingress-app: sample1
  template:
    metadata:
      labels:
        ingress-app: sample1
    spec:
      containers:
        - name: nginx-container
          image: nginx:1.12
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: sample-ingress-svc-2
spec:
  type: NodePort
  ports:
    - name: "http-port"
      protocol: "TCP"
      port: 8888
      targetPort: 80
  selector:
    ingress-app: sample2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-deployment-2
spec:
  replicas: 1
  selector:
    matchLabels:
      ingress-app: sample2
  template:
    metadata:
      labels:
        ingress-app: sample2
    spec:
      containers:
        - name: nginx-container
          image: nginx:1.12
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: sample-ingress-default
spec:
  type: NodePort
  ports:
    - name: "http-port"
      protocol: "TCP"
      port: 8888
      targetPort: 80
  selector:
    ingress-app: default
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-deployment-default
spec:
  replicas: 1
  selector:
    matchLabels:
      ingress-app: default
  template:
    metadata:
      labels:
        ingress-app: default
    spec:
      containers:
        - name: nginx-container
          image: nginx:1.12
          ports:
            - containerPort: 80


# k exec -it sample-deployment-1- -- mkdir /usr/share/nginx/html/path1
# k exec -it sample-deployment-1- -- cp /etc/hostname /usr/share/nginx/html/path1/index.html
# k exec -it sample-deployment-2- -- mkdir /usr/share/nginx/html/path2
# k exec -it sample-deployment-2- -- cp /etc/hostname /usr/share/nginx/html/path2/index.html
# k exec -it sample-deployment-default -- cp /etc/hostname /usr/share/nginx/html/index.html
# openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout ~/tls.key -out ~/tls.crt -subj "/CN=sample.example.com"
# k create secret tls --save-config tls-sample --key ~/tls.key --cert ~/tls.crt
