k8s/sample_guide/nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: sample-nodeport
spec:
  type: NodePort
  ports:
    - name: "http-port"
      protocol: "TCP"
      port: 8080
      targetPort: 80
      nodePort: 30081
  selector:
    app: sample-app

# 別pod立ち上げて
# k run --image=centos:7 --restart=Never --rm -i testpod -- curl -s http://sample-nodeport:8080
# k run --image=centos:7 --restart=Never --rm -i testpod -- curl -s http://10.96.27.167:8080
# VMから
# curl http://10.0.2.15:30081
# ローカルから
# curl 192.168.33.10:30081
