k8s/sample_guide/example-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
 rules:
 - host: hello-world.info
   http:
     paths:
     - path: /*
       backend:
         serviceName: web
         servicePort: 8080
     # - path: /v2/*
     #   backend:
     #    serviceName: web2
     #    servicePort: 8080
     # - path: /v3/*
     #   backend:
     #    serviceName: web3
     #    servicePort: 8080

#
# # curl 10.0.2.15 -H 'Host:hello-world.info'
# Hello, world!
# Version: 1.0.0
# Hostname: web-ddb799d85-lkhz8
# # curl 10.0.2.15/v2/ -H 'Host:hello-world.info'
# Hello, world!
# Version: 2.0.0
# Hostname: web2-5cf6945d9b-4cbhh
